--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### Config ###
+src/main/resources/application-properties.yml
+
 ### STS ###
 .apt_generated
 .classpath
